# MohrCirclePlotter-python

./: LICENSE  README.md  demo.ipynb  demo.py  pyproject.toml
.github/workflows/: deploy.yml  documentation.yml
docs/source/: conf.py  index.rst  modules.rst  mohrcircleplotter.rst
mohrcircleplotter/: __init__.py  circle.py  plotter.py
